--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "open-iconic": "^1.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-inlinesvg": "^0.6.2",
     "react-scripts": "1.0.13",
     "styled-components": "^2.1.2"
   },
