--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,8 +1,24 @@
 {
   "extends": "react-app",
   "rules": {
-    "react/jsx-indent": ["error", 2],
-    "react/jsx-indent-props": ["error", 2]
+    "react/jsx-indent": [
+      "error",
+      2
+    ],
+    "react/jsx-indent-props": [
+      "error",
+      2
+    ],
+    "newline-per-chained-call": [
+      "error",
+      {
+        "ignoreChainWithDepth": 1
+      }
+    ],
+    "semi": [
+      "error",
+      "always"
+    ]
   }
   // {
   //   "env": {
@@ -80,7 +96,7 @@
   //       "after": true
   //     }],
   //     "quotes": ["error", "single"],
-  //     "semi": ["error", "always"]
+  //     
   //   }
   // }
 }
