--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.1",
+    "jest-cli": "^21.1.0",
     "open-iconic": "^1.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-inlinesvg": "^0.6.2",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
     "styled-components": "^2.1.2"
   },
   "scripts": {
