--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,7 +3,8 @@
   "rules": {
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "jsx-quotes": ["error", "prefer-single"]
   }
   // {
   //   "env": {
