--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,9 @@
     "htmlparser2": "^3.9.2",
     "moment": "^2.18.1",
     "node-fetch": "^1.7.3"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.7.2"
   }
 }
