--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,15 @@
     "react-inlinesvg": "^0.6.2",
     "react-loaders": "^2.6.1",
     "react-scripts": "1.0.13",
-    "styled-components": "^2.4.0"
+    "styled-components": "^3.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && rm -r ../backend/build && mv build ../backend/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-testing-library": "^2.1.1"
   }
 }
