--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
-    "eslint": "^4.7.2"
+    "eslint": "^4.7.2",
+    "nodemon": "^1.17.3"
   }
 }
