--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -r ../backend/build && mv build ../backend/",
+    "build": "react-scripts build && rm -r ../build && mv build ../",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
